# vending-machine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
beverage-preference-service/: Dockerfile  beverage_server.py
config/: service-config.json
gen-cpp/: BeveragePreferenceService.cpp
script/: output.txt
src/BeveragePreferenceService/: BeverageHandler.h  BeveragePreferenceService.cpp  CMakeLists.txt
src/OrderBeverageService/: CMakeLists.txt  OrderBeverageHandler.h  OrderBeverageService.cpp
src/WeatherService/: WeatherHandler.h
